<resources>
    <string name="app_name">Plant Indentifier</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_email">Enter email</string>
    <string name="john_mail_com">john@mail.com</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="or">Or</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="sign_up_with_facebook">Sign up with facebook</string>
    <string name="already_have_an_account">Already have an account?&#160;</string>
    <string name="sign_in">Sign in</string>
    <string name="empty_fields">Empty fields are not allowed</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="login">Login</string>
    <string name="login_with">Login with</string>
    <string name="don_t_have_an_account">Don\'t have an account?&#160;</string>
    <string name="account_created_successfully">Account  created successfully</string>
    <string name="passwords_are_not_identical">Passwords are not identical</string>
    <string name="login_successful">Login successful</string>
    <string name="home">Home</string>
    <string name="explore">explore</string>
    <string name="saved">Saved</string>
    <string name="profile">Profile</string>
    <string name="scan_and_indentify_the_plant">Scan and indentify the plant</string>
</resources>