<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.SignUpFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".1" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".9" />


    <TextView
        android:id="@+id/sign_up_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dmsans_bold"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/top_guideline" />


    <TextView
        android:id="@+id/enter_email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/dmsans_bold"
        android:text="@string/enter_email"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_tv" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/john_mail_com"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        app:layout_constraintLeft_toRightOf="@+id/left_guideline"
        app:layout_constraintRight_toLeftOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/enter_email_tv" />


    <TextView
        android:id="@+id/enter_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/dmsans_bold"
        android:text="@string/enter_password"

        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/email_et" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintLeft_toRightOf="@+id/left_guideline"
        app:layout_constraintRight_toLeftOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/enter_password_tv" />

    <TextView
        android:id="@+id/re_enter_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/dmsans_bold"
        android:text="@string/re_enter_password"
        android:textColor="@color/black"

        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/password_et" />

    <EditText
        android:id="@+id/re_enter_password_et"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintLeft_toRightOf="@+id/left_guideline"
        app:layout_constraintRight_toLeftOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/re_enter_password_tv" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_btn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/dmsans_bold"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toLeftOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/re_enter_password_et" />


    <LinearLayout
        android:id="@+id/holder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_btn">

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1.25"
            android:background="@color/grey_app" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/dmsans_bold"
            android:gravity="center"
            android:text="@string/or" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1.25"
            android:background="@color/grey_app" />

    </LinearLayout>

    <TextView
        android:id="@+id/sign_up_with_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/dmsans_bold"
        android:text="@string/sign_up_with"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/holder" />

    <LinearLayout
        android:id="@+id/sign_up_providers_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/holder_2"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_with_tv">


        <ImageView
            android:id="@+id/connect_with_facebook"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/sign_up_with_facebook"
            android:src="@drawable/ic_facebook" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/connect_with_google"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/sign_up_with_facebook"
            android:src="@drawable/ic_google" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/connect_with_twitter"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/sign_up_with_facebook"
            android:src="@drawable/ic_twitter" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/holder_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_providers_holder">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dmsans_bold"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/sign_in_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dmsans_bold"
            android:text="@string/sign_in"
            android:textColor="@color/green_app" />

    </LinearLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".95" />


</androidx.constraintlayout.widget.ConstraintLayout>